repair cropped image bug

--- a/client/src/Components/CroppedCards.css
+++ b/client/src/Components/CroppedCards.css
@@ -11,10 +11,15 @@
   background: #fff 0%;
 }
 
+.cropped-positioner {
+  position: relative;
+}
+
 .cropped-normal-image {
-  position: fixed;
-  right: 500px;
-  top: 100px;
+  /*   position: absolute; */
+  /* position: fixed; */
+  /*   right: 500px;
+  top: 100px; */
 }
 
 .cropped-card .manacost-name-container {
