--- a/client/src/Pages/DeckBuilder.css
+++ b/client/src/Pages/DeckBuilder.css
@@ -102,6 +102,7 @@
   justify-content: space-around;
   align-items: flex-end;
   border-radius: 10px;
+  box-shadow: 0px 0px 5px rgb(0, 0, 0);
 }
 
 .mana-number-container {
